<resources>
    <string name="app_name">DATN_ExpanseManagement</string>
    <string name="check_double_click_exit_app">Please click BACK again to exit</string>
    <string name="text_overview">Lập kế hoạch</string>
    <string name="text_account">Tài khoản</string>
    <string name="text_report">Báo cáo</string>
    <string name="text_other">Khác</string>
    <string name="text_total_money">Tổng tiền:</string>
    <string name="text_wallet_money">Ví cơ bản</string>
    <string name="text_accumulation">Tích lũy</string>
    <string name="text_monday">Monday</string>
    <string name="text_tuesday">Tuesday</string>
    <string name="text_wednesday">Wednesday</string>
    <string name="text_thursday">Thursday</string>
    <string name="text_friday">Friday</string>
    <string name="text_saturday">Saturday</string>
    <string name="text_sunday">Sunday</string>
    <string name="text_total_date">%d days</string>
    <string name="text_date_checkin">Check In Date</string>
    <string name="text_date_checkout">Check Out Date</string>
    <string name="text_date_check_format">%1$s, %2$s</string>
    <string name="text_card">Ví tiết kiệm</string>
    <string name="text_control">Điều chỉnh số dư</string>
    <string name="text_delete">Xóa</string>
    <string name="text_update">Sửa</string>
    <string name="text_send_to">Gửi vào</string>
    <string name="text_put_out">Lấy ra</string>
    <string name="text_finish">Kết thúc</string>
    <string name="text_current_finance">Tài chính hiện tại</string>
    <string name="text_choose_category">Chọn hạng mục</string>
    <string name="text_comment">Diễn giải</string>
    <string name="text_choose_example">Chọn mẫu</string>
    <string name="text_money">Số tiền</string>
    <string name="text_trip">Chuyến đi, sự kiện</string>
    <string name="text_hint_for_friend">Chi cho ai</string>
    <string name="text_add_detail">Thêm chi tiết</string>
    <string name="text_collapse">Thu gọn</string>
    <string name="text_donate">Chi tiền</string>
    <string name="text_receive">Thu tiền</string>
    <string name="text_loan">Vay nợ</string>
    <string name="text_invest">Đầu tư</string>
    <string name="text_hint_0">0</string>
    <string name="text_add_category">Thêm hạng mục</string>
    <string name="text_category_name">Tên hạng mục</string>
    <string name="add_icon">Thêm icon</string>
    <string name="text_warning_add_category_title">Vui lòng nhập tên hạng mục</string>
    <string name="text_warning_empty">Xin vui lòng nhập thông tin</string>
    <string name="text_title_category">Hạng mục cha</string>
    <string name="text_location">Địa điểm</string>
    <string name="text_choose_wallet">Chọn tài khoản</string>
    <string name="text_edit_trip">Chỉnh sửa sự kiện</string>
    <string name="text_finished">Đã kết thúc ?</string>
    <string name="text_cancel">HỦY</string>
    <string name="text_ok">ĐỒNG Ý</string>
    <string name="text_add_contacts">Thêm liên hệ mới ở đây</string>
    <string name="text_contacts_new">Liên hệ gần đây</string>
    <string name="text_contacts">Danh bạ</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_report_finance">Tài chính hiện tại</string>
    <string name="text_report_receive">Tình hình thu</string>
    <string name="text_report_donate">Tình hình chi</string>
    <string name="text_report_friend">Đối tượng thu chi</string>
    <string name="text_report_loan">Theo dõi vay nợ</string>
    <string name="text_report_trip">Chuyến đi/Sự kiện</string>
    <string name="text_title_report">Báo cáo</string>
    <string name="text_history">Lịch sử ghi</string>
    <string name="text_search_history">Tìm kiếm ghi chép</string>
    <string name="text_total_out_come">Tổng chi</string>
    <string name="text_total_in_come">Tổng thu</string>
    <string name="text_loan_title">Cho vay</string>
    <string name="text_loaner">Người vay</string>
    <string name="text_borrow">Đi vay</string>
    <string name="text_exchange_rate">Tra cứu tỉ giá</string>
    <string name="text_rate">Tra cứu</string>
    <string name="text_hint_search_rate">Tìm theo tên ký tự</string>
    <string name="text_history_currently">Ghi chép gần đây</string>
    <string name="text_read_history">Xem ghi chép</string>
    <string name="text_splash_1">Trải nghiệm niềm vui quản lý tài chính bằng việc đăng ký lần đầu sử dụng</string>
    <string name="text_splash_2">Kiểm soát thu chi, nhắm thẳng mục tiêu về tài chính</string>
    <string name="text_splash_3">Hưởng thụ cuộc sống thoải mái, tự do tài chính với người thân, bạn bè</string>
    <string name="text_register_new">Đăng ký tài khoản mới</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_hint_enter_phone">Nhập số diện thoại</string>
    <string name="text_hint_enter_password">Nhập mật khẩu</string>
    <string name="text_or">Hoặc</string>
    <string name="text_login_with_facebook">Đăng nhập bằng Facebook</string>
    <string name="text_hint_enter_name">Nhập họ tên</string>
    <string name="text_register_with_facebook">Đăng ký bằng Facebook</string>
    <string name="text_register">Đăng ký</string>
    <string name="text_warning_phone">Invalid phone number</string>
    <string name="text_error_empty">Vui lòng nhập thông tin</string>
    <string name="facebook_app_id">660893037829174</string> <string name="fb_login_protocol_scheme">fb660893037829174</string>
    <string name="text_title_create_wallet">Hãy tạo cho mình một chiếc ví</string>
    <string name="text_title_total_price">Bạn đang có bao nhiêu tiền trong ví ?</string>
    <string name="text_start_app">Bắt đầu sử dụng</string>
    <string name="text_add_wallet_default">Thêm tài khoản</string>
    <string name="text_add_wallet_saving">Thêm sổ tiết kiệm</string>
    <string name="text_add_wallet_accumulation">Thêm tích lũy</string>
    <string name="text_enter_name_wallet">Tên tài khoản</string>
    <string name="text_enter_type_wallet">Loại tài khoản</string>
    <string name="text_save">Lưu</string>
    <string name="text_start_price">Số dư ban đầu</string>
    <string name="text_bank">Ngân hàng</string>
    <string name="text_start_date_sent">Ngày gửi</string>
    <string name="text_start_date">Ngày bắt đầu</string>
    <string name="text_period">Kỳ hạn</string>
    <string name="text_interest_rate">Lãi suất</string>
    <string name="text_unit_rate">%/năm</string>
    <string name="text_non_interest_rate">Lãi suất không kỳ hạn</string>
    <string name="text_number_date_rate">Số ngày tính lãi/ năm</string>
    <string name="text_day">Ngày</string>
    <string name="text_pay_to">Chi trả cho việc gì?</string>
    <string name="text_pay_time">Trong bao lâu</string>
    <string name="number_picker_format_string">%s</string>
    <string name="number_picker_formatter" translatable="false">%d</string>
</resources>
