<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_20dp"
    android:layout_marginStart="@dimen/spacing_20dp"
    android:layout_marginEnd="@dimen/spacing_20dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:gravity="center"
        style="@style/StyleTextView.Large.Black"
        android:text="@string/text_edit_trip"
        android:id="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_marginTop="@dimen/spacing_10dp"
        android:id="@+id/edtChangeName"
        tools:text="fjasf"
        style="@style/StyleTextView.Medium.Black"
        android:paddingTop="@dimen/spacing_10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:id="@+id/viewBottom"
        android:layout_marginTop="@dimen/spacing_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/edtChangeName"
        app:layout_constraintTop_toBottomOf="@id/edtChangeName"
        android:background="@color/black"
        android:layout_width="0dp"
        android:layout_height="0.5dp"/>
    <CheckBox
        android:layout_marginTop="@dimen/spacing_10dp"
        android:id="@+id/ckIsFinished"
        android:text="@string/text_finished"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textAllCaps="true"
        android:fontFamily="@font/roboto_bold"
        style="@style/StyleTextView.Medium.Red"
        android:layout_marginTop="@dimen/spacing_10dp"
        android:padding="@dimen/spacing_10dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/text_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ckIsFinished"
        android:id="@+id/tvDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVertical"
        app:layout_constraintGuide_percent="0.6"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textAllCaps="true"
        android:fontFamily="@font/roboto_bold"
        style="@style/StyleTextView.Medium.Red"
        android:layout_marginTop="@dimen/spacing_10dp"
        android:padding="@dimen/spacing_10dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/text_cancel"
        app:layout_constraintStart_toEndOf="@id/glVertical"
        app:layout_constraintTop_toBottomOf="@id/ckIsFinished"
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:fontFamily="@font/roboto_bold"
        style="@style/StyleTextView.Medium.Blue"
        android:layout_marginTop="@dimen/spacing_10dp"
        android:padding="@dimen/spacing_10dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/text_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvCancel"
        app:layout_constraintTop_toBottomOf="@id/ckIsFinished"
        android:id="@+id/tvOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>