<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/spacing_20dp"
    android:background="@color/white"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginTop="@dimen/spacing_40dp"
        android:id="@+id/imgLogo"
        app:srcCompat="@drawable/splash_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="200dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/StyleTextView.Normal.Black"
        android:padding="@dimen/spacing_6dp"
        android:paddingStart="@dimen/spacing_20dp"
        android:hint="@string/text_hint_enter_phone"
        android:layout_marginTop="@dimen/spacing_40dp"
        android:background="@drawable/bg_corner_e8e8e8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_44dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:inputType="textPassword"
        style="@style/StyleTextView.Normal.Black"
        android:padding="@dimen/spacing_6dp"
        android:paddingStart="@dimen/spacing_20dp"
        android:hint="@string/text_hint_enter_password"
        android:layout_marginTop="@dimen/spacing_10dp"
        android:background="@drawable/bg_corner_e8e8e8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtUser"
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_44dp"/>
    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_marginTop="@dimen/spacing_40dp"
        android:background="@drawable/bg_corner_blue_6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="?attr/selectableItemBackground"
            style="@style/StyleTextView.Medium.White"
            android:text="@string/text_login"
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textOr"
        android:fontFamily="@font/roboto_regular"
        style="@style/StyleTextView.Normal.SilverLight"
        android:text="@string/text_or"
        android:layout_marginTop="@dimen/spacing_20dp"
        app:layout_constraintTop_toBottomOf="@id/llLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/llLoginFacebook"
        android:layout_marginTop="@dimen/spacing_10dp"
        android:background="@drawable/bg_corner_blue_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:paddingEnd="@dimen/spacing_40dp"
            android:paddingStart="@dimen/spacing_20dp"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/ic_facebook"
            android:background="?attr/selectableItemBackground"
            style="@style/StyleTextView.Medium.White"
            android:text="@string/text_login_with_facebook"
            android:id="@+id/btnLoginFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>