<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layoutToolbar"
        layout="@layout/layout_toolbar_add_category" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="@dimen/spacing_20dp"
        android:id="@+id/imgAddIcon"
        android:layout_width="@dimen/spacing_72dp"
        android:layout_height="@dimen/spacing_72dp"
        android:src="@drawable/ic_add_category_icon"
        app:layout_constraintBottom_toBottomOf="@id/edtCategoryName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edtCategoryName" />

    <TextView
        android:gravity="center"
        style="@style/StyleTextView.Small.219DFD"
        android:text="@string/add_icon"
        app:layout_constraintBottom_toBottomOf="@id/imgAddIcon"
        app:layout_constraintEnd_toEndOf="@id/imgAddIcon"
        app:layout_constraintStart_toStartOf="@id/imgAddIcon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@id/imgAddIcon"
        android:id="@+id/edtCategoryName"
        style="@style/StyleTextView.Medium.696969"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_30dp"
        android:hint="@string/text_category_name"
        android:paddingStart="@dimen/spacing_14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar" />

    <TextView
        android:id="@+id/tvWarning"
        android:visibility="gone"
        android:paddingEnd="@dimen/spacing_20dp"
        android:gravity="end"
        style="@style/StyleTextView.Small.DB5A5A"
        android:text="@string/text_warning_add_category_title"
        app:layout_constraintEnd_toEndOf="@id/edtCategoryName"
        app:layout_constraintStart_toStartOf="@id/edtCategoryName"
        app:layout_constraintTop_toBottomOf="@id/edtCategoryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <View
        android:layout_marginTop="@dimen/spacing_20dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/edtCategoryName"
        app:layout_constraintEnd_toEndOf="@id/edtCategoryName"
        app:layout_constraintStart_toStartOf="@id/edtCategoryName"
        android:id="@+id/viewTop"
        android:layout_width="0dp"
        android:layout_height="0.5dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/edtComment"
        app:layout_constraintEnd_toEndOf="@id/imgAddIcon"
        app:layout_constraintStart_toStartOf="@id/imgAddIcon"
        app:layout_constraintTop_toTopOf="@id/edtComment"
        app:srcCompat="@drawable/ic_insert_comment_black_24dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:maxLines="1"
        android:id="@+id/edtComment"
        style="@style/StyleTextView.Medium.Black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_20dp"
        android:background="@color/white"
        android:hint="@string/text_comment"
        android:padding="@dimen/spacing_10dp"
        android:paddingStart="@dimen/spacing_40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgComment"
        app:layout_constraintTop_toBottomOf="@id/viewTop" />

    <View
        android:layout_marginTop="@dimen/spacing_10dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/edtComment"
        app:layout_constraintEnd_toEndOf="@id/edtCategoryName"
        app:layout_constraintStart_toStartOf="@id/edtCategoryName"
        android:id="@+id/viewCenter"
        android:layout_width="0dp"
        android:layout_height="0.5dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLeft"
        android:layout_width="@dimen/spacing_40dp"
        android:layout_height="@dimen/spacing_40dp"
        app:layout_constraintBottom_toBottomOf="@id/tvChooseCategory"
        app:layout_constraintEnd_toEndOf="@id/imgAddIcon"
        app:layout_constraintStart_toStartOf="@id/imgAddIcon"
        app:layout_constraintTop_toTopOf="@id/tvChooseCategory"
        app:srcCompat="@drawable/ic_help_black_24dp" />

    <TextView
        android:layout_marginTop="@dimen/spacing_20dp"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:id="@+id/tvChooseCategory"
        style="@style/StyleTextView.Medium.Black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/spacing_10dp"
        android:paddingStart="@dimen/text_36sp"
        android:text="@string/text_choose_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgLeft"
        app:layout_constraintTop_toBottomOf="@id/viewCenter" />

    <LinearLayout
        android:layout_marginTop="@dimen/spacing_20dp"
        android:layout_marginEnd="@dimen/spacing_20dp"
        android:layout_marginStart="@dimen/spacing_20dp"
        android:background="@drawable/bg_corner_blue_6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChooseCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="?attr/selectableItemBackground"
            style="@style/StyleTextView.Medium.White"
            android:text="Lưu"
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>